--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
+  "homepage": "https://ernazard.github.io/personal-website",
   "name": "simplefolio",
   "version": "1.0.1",
   "private": "true",
   "description": "A clean, beautiful and responsive portfolio template for Developers!",
   "source": "src/index.html",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "parcel",
     "build": "parcel build",
     "gh-pages-build": "parcel build --public-url ."
@@ -19,10 +22,10 @@
   "bugs": {
     "url": "https://github.com/cobidev/simplefolio/issues"
   },
-  "homepage": "https://github.com/cobidev/simplefolio#readme",
   "devDependencies": {
     "@parcel/transformer-sass": "^2.7.0",
     "concurrently": "^8.2.0",
+    "gh-pages": "^5.0.0",
     "http-server": "^14.1.1",
     "parcel": "^2.7.0",
     "prettier": "^2.7.1"
